// Copyright 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package explain;

import "google/protobuf/timestamp.proto";

message TimeFilter{
    bool has_start_from = 1;
    bool has_end_at = 2;
	google.protobuf.Timestamp start_from = 3;
	google.protobuf.Timestamp end_at = 4;
	bool list_untimed_resources = 5;
}